--- a/tutorials/configs/merfish_probe_designer_test.yaml
+++ b/tutorials/configs/merfish_probe_designer_test.yaml
@@ -9,32 +9,34 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genome and gene annotation
 source: custom # required: indicate that own annotation should be used
-annotation_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-sequence_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+annotation_file: ../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+sequence_file: ../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
 species: human # optional: species of provided annotation, leave empty if unknown
 annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
 genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
 files_source: NCBI  # optional: source of provided annotation, leave empty if unknown
 
+
 primers_length: 20
 readout_length: 30
 use_default_readouts: True # use the default readout sequences from the merfish paper
 percentage_blank: 10 #percentage of blank barcodes
-
+oligo_length_max : 30
+oligo_length_min: 29
 ### Parameters for oligo sequences generation
 
 primer_oligo:
-  file_bc25mer: ./data/bc25mer/bc25mer.240k.fasta # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
-  oligo_output : ./data/bc25mer/primer/
-  oligo_DB_output : ./data/oligo_creation/primer/
+  file_bc25mer: ../data/bc25mer.240k.fasta # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
+  oligo_output : ../data
+  oligo_DB_output : ../data
   oligo_length_min: 19 #min length of oligos
   oligo_length_max: 20 #max length of oligos
 
 
 readout_oligo:
-  file_bc25mer: ./data/bc25mer/bc25mer.240k.fasta # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
-  oligo_output: ./data/bc25mer/readout/
-  oligo_DB_output: ./data/oligo_creation/readout/
+  file_bc25mer: ../data/bc25mer.240k.fasta # file with a list the genes used to generate the oligos  sequences, set as None if all the genes are used
+  oligo_output: ../data
+  oligo_DB_output: ../data
   oligo_length_min: 29 #min length of oligos
   oligo_length_max: 30 #max length of oligos
 
