--- a/SPOT/configs/probe_design_SPOT_custom.yaml
+++ b/SPOT/configs/probe_design_SPOT_custom.yaml
@@ -16,15 +16,15 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 
 source: custom # required: indicate that own annotation should be used
-file_annotation: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-file_sequence: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
+file_annotation: ./SPOT/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+file_sequence: ./SPOT/data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
 files_source: NCBI # optional: original source of the genomic files
 species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
 annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
 genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
 
 ### Parameters for oligo sequences generation
-file_genes: ./data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
+file_genes: ./SPOT/data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
 # WHAT IS THIS?
@@ -58,8 +58,8 @@ GC_weight: 1 # weight of the GC content of the oligo in the efficiency score
 
 
 ### Parameters for the oligosets generation
-oligoset_size: 5 #ideal number of oligos per oligoset
-min_oligoset_size: 2 #minimum number of oligos per oligoset
+oligoset_size: 24 #ideal number of oligos per oligoset
+min_oligoset_size: 20 #minimum number of oligos per oligoset
 n_sets: 100 # maximum number of sets per gene
 
 
