--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,12 @@ dmypy.json
 # mac OS
 
 .DS_Store
+
+# VSCode
+.vscode
+
+# Experiments
+output*
+tests/merfish_pipeline.ipynb
+tests/seqfish_pipeline.ipynb
+tests/*.pickle
