--- a/tutorials/configs/merfish_probe_designer_test.yaml
+++ b/tutorials/configs/merfish_probe_designer_test.yaml
@@ -1,5 +1,5 @@
 ### General parameters
-n_jobs: 1 # number of cores used to run the pipeline
+n_jobs: 12 # number of cores used to run the pipeline
 dir_output: output_merfish # name of the directory where the output files will be written
 file_format: tsv # fromat of the written files, can be "tsv" or "gtf"
 min_oligos_per_gene: 0 # minimum number of oligos that a gene must have before it gets deleted
@@ -7,14 +7,20 @@ write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
 
 
-### Parameters for genome and gene annotation
-source: custom # required: indicate that own annotation should be used
-annotation_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-sequence_file: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
-species: human # optional: species of provided annotation, leave empty if unknown
-annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
-genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
-files_source: NCBI  # optional: source of provided annotation, leave empty if unknown
+### Parameters for genomic region generator that creates fasta file
+source: custom # required: indicate that NCBI annotation should be used
+source_params:
+  file_annotation: ./output_merfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf
+  file_sequence: ./output_merfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.fna
+  files_source: NCBI
+  species: Homo_sapiens
+  annotation_release: 110
+  genome_assembly: GRCh38.p14
+# source_params:
+#     taxon: vertebrate_mammalian # required: taxon of the species, valid taxa are: archaea, bacteria, fungi, invertebrate, mitochondrion, plant, plasmid, plastid, protozoa, vertebrate_mammalian, vertebrate_other, viral
+#     species: Homo_sapiens # required: species name in NCBI download format, e.g. 'Homo_sapiens' for human; see https://ftp.ncbi.nlm.nih.gov/genomes/refseq/ for available species name
+#     annotation_release: 110 # required: release number of annotation e.g. '109' or '109.20211119'  or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
+
 file_genes: ./data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
 
 oligo_length_max: 30
@@ -22,6 +28,8 @@ primers_length: 20
 readout_length: 30
 use_default_readouts: True # use the default readout sequences from the merfish paper
 percentage_blank: 10 #percentage of blank barcodes
+
+
 
 ### Parameters for oligo sequences generation
 
