--- a/tutorials/configs/probe_design_SPOT_custom.yaml
+++ b/tutorials/configs/probe_design_SPOT_custom.yaml
@@ -16,15 +16,16 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 
 source: custom # required: indicate that own annotation should be used
-file_annotation: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
-file_sequence: ./data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
-files_source: NCBI # optional: original source of the genomic files
-species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
-annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
-genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
+source_params:
+    file_annotation: output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf # required: GTF file with gene annotation
+    file_sequence: output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.fna # required: FASTA file with genome sequence
+    files_source: NCBI # optional: original source of the genomic files
+    species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
+    annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
+    genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
 
 ### Parameters for oligo sequences generation
-file_genes: ./data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
+file_genes: data/genes/ncbi_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
 # WHAT IS THIS?
@@ -43,7 +44,7 @@ number_consecutive: 5 # min number of not allowed consecutive nucleotides
 ligation_region_size: 5 #coverage between oligos and target sequence should not span region around ligation site (e.g. ligation_region = 5 would correspond to -4 to +5 nt around ligation site), if ligation_region = 0, omit this requirement
 
 # Blastn Similarity Filter
-word_size: 10 #word size for the blastn seed (exact match to target)
+word_size: 10 #word size for the blastn x (exact match to target)
 coverage: 50 #minimum coverage between oligos and target sequence, ranging from 0 to 100% (full coverage)
 percent_identity: 80 #maximum similarity between oligos and target sequences, ranging from 0 to 100% (no missmatch)
 strand: plus # strand of the query sequence to search
