Create cross hybridization filter

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ seqfish_pipeline.ipynb
 tests/*.pickle
 
 oligo_designer_toolsuite/_version.py
+tests/notebooks/temp_path/*
+tests/notebooks/test_cross_hybridization_filter.ipynb
