--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 Sphinx==4.5.0
-sphinx-book-theme==0.3.3
+renku-sphinx-theme==0.2.3
 sphinx-autodocgen==1.3
 sphinxcontrib-napoleon==0.7
 nbsphinx==0.8.12
