--- a/data/configs/scrinshot_probe_designer_custom.yaml
+++ b/data/configs/scrinshot_probe_designer_custom.yaml
@@ -1,9 +1,10 @@
 ### General parameters
-n_jobs: 1 # number of cores used to run the pipeline
+n_jobs: 7 # number of cores used to run the pipeline
 dir_output: output # name of the directory where the output files will be written
 min_probes_per_gene: 0 # minimum number of probes that a gene must have before it gets deleted
 write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the probe sequences after each step of the pipeline
+max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
 
 
 ### Parameters for genomic region generator that creates fasta file
