--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,9 +59,10 @@ dependencies = [
 dev = ["pytest"]
 
 [project.scripts]
+genomic_region_generation = "oligo_designer_toolsuite.pipelines._genomic_region_generation:main"
 scrinshot_probe_designer = "oligo_designer_toolsuite.pipelines._scrinshot_probe_designer:main"
 merfish_probe_designer = "oligo_designer_toolsuite.pipelines._merfish_probe_designer:main"
-oligo_seq = "oligo_designer_toolsuite.pipelines._oligo_seq:main"
+oligo_seq = "oligo_designer_toolsuite.pipelines._oligo_seq_designer:main"
 
 
 [project.urls]
