ai filters added to requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
   "joblib",
   "seqfold",
   "effidict",
+  "oligo-designer-toolsuite-AI-filters",
 ]
 
 [project.optional-dependencies]
