--- a/data/configs/scrinshot_probe_designer.yaml
+++ b/data/configs/scrinshot_probe_designer.yaml
@@ -1,5 +1,5 @@
 #######################
-### BASIC PARAMETERS ###
+### USER PARAMETERS ###
 #######################
 
 ### General parameters
@@ -29,8 +29,12 @@ homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolym
 # padlock arms
 arm_Tm_dif_max: 2 # maximum melting temperature difference of both arms (difference shouldn't be higher than 5! But range is not super important, the lower the better)
 arm_length_min: 10 # minimum length of each arm
-arm_Tm_min: 50 # minimum melting temperature of each arm
+arm_Tm_min: 50 # minimum melting temperature of each arm 
 arm_Tm_max: 60 # maximum melting temperature of each arm
+# detection oligos
+min_thymines: 2 # minimal number of Thymines in detection oligo.
+detect_oligo_length_min: 15 # minimum length of detection probe
+detect_oligo_length_max: 40 # maximum length of detection probe
 
 ### Parameters for the specificity filters
 files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
@@ -51,16 +55,12 @@ distance_between_probes: 0 # how much overlap should be allowed between oligos, 
 n_sets: 100 # maximum number of sets to generate
 top_n_sets: 3 #maximum number of sets to report in "padlock_probes_order.yaml"
 
-### Parameters for the padlock detection probe design
-min_thymines: 2 # minimal number of Thymines in detection oligo.
+### Parameters for creation of final probe sequence
 U_distance: 5 # preferred minimal distance between U(racils)
-detect_oligo_length_min: 15 # minimum length of detection probe
-detect_oligo_length_max: 40 # maximum length of detection probe
 detect_oligo_Tm_opt: 56 # optimal melting temperature of detection probe
 
-
 ############################
-### ADVANCED PARAMETERS ###
+### DEVELOPER PARAMETERS ###
 ############################
 
 ### Parameters for the specificity filters
