--- a/data/configs/scrinshot_probe_designer.yaml
+++ b/data/configs/scrinshot_probe_designer.yaml
@@ -53,11 +53,11 @@ probeset_size_min: 3 # minimum size of probe sets (in case there exist no set of
 probeset_size_opt: 5 # optimal size of probe sets
 distance_between_probes: 0 # how much overlap should be allowed between oligos, e.g. if oligos can overlpap x bases choose -x, if oligos can be next to one another choose 0, if oligos should be x bases apart choose x
 n_sets: 100 # maximum number of sets to generate
-top_n_sets: 3 #maximum number of sets to report in "padlock_probes_order.yaml"
 
 ### Parameters for creation of final probe sequence
 U_distance: 5 # preferred minimal distance between U(racils)
 detect_oligo_Tm_opt: 56 # optimal melting temperature of detection probe
+top_n_sets: 3 #maximum number of sets to report in padlock_probes.yaml and "padlock_probes_order.yaml"
 
 ############################
 ### DEVELOPER PARAMETERS ###
