--- a/data/configs/scrinshot_probe_designer.yaml
+++ b/data/configs/scrinshot_probe_designer.yaml
@@ -85,7 +85,7 @@ cross_hybridization_blastn_search_parameters:
   soft_masking: "false"
   max_target_seqs: 10
 cross_hybridization_blastn_hit_parameters:
-  coverage: 80 # can be turned into min_alignment_length
+  coverage: 80 # can be turned into min_alignment_length 60?
 
 
 ### Parameters for the Oligo set selection
