--- a/data/configs/merfish_subconfigs/readout_probe_designer.yaml
+++ b/data/configs/merfish_subconfigs/readout_probe_designer.yaml
@@ -63,11 +63,15 @@ cross_hybridization_blastn_hit_parameters:
 
 
 ### Parameters for the Oligo set selection
-max_graph_size: 5000 # maximum number of oligos that are taken into consisderation in the last step (5000 -> ~5GB, 2500 -> ~1GB)
+n_sets: 1 # number of oligo sets to create
+set_size: 16 # size of the oligo set, the total number of readout probes
+homogeneous_properties_weights: # oligo sets should have similar properties, the weighted sum of variance of the properties is minimized
+  TmNN: 1 # melting temperature
+  GC_content: 1 # GC content
+n_combinations: 100000 # number of random combinations of size set_size to try
 
 ### Parameter for the codebook generation
 # defaults to the MDH4 standard
-n_bits: 16 # number of bits per barcode
 min_hamming_distance: 4 # minimum hamming distance between barcodes
 hamming_weight: 4 # number of bits set to 1 in the barcode
 channels_ids:
