--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,11 +1,11 @@
-Sphinx>=5.0
-renku-sphinx-theme==0.2.3
-sphinx-autodocgen==1.3
-sphinxcontrib-napoleon==0.7
-nbsphinx==0.8.12
-nbsphinx-link==1.3.0
-pandoc==2.3
-jinja2==3.1.2
+Sphinx
+renku-sphinx-theme
+sphinx-autodocgen
+sphinxcontrib-napoleon
+nbsphinx
+nbsphinx-link
+pandoc
+jinja2
 argparse
 pandas
 iteration_utilities
