add missing requirements

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,11 +6,18 @@ nbsphinx
 nbsphinx-link
 pandoc
 jinja2
+
+datetime
 argparse
+numpy
 pandas
+scipy
 iteration_utilities
 Bio
 pyyaml
 networkx
 joblib
+joblib_progress
 seqfold
+effidict
+oligo-designer-toolsuite-ai-filters
