--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [
   "effidict",
   "joblib_progress",
   "oligo-designer-toolsuite-ai-filters",
+  "ipywidgets",
 ]
 
 [project.optional-dependencies]
